--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,1 +1,17 @@
-<p>shop works!</p>
+<app-product-list 
+    title="title skill"
+    subTitle="subTitle skill"
+    [products]="products.byGroup['skill']"
+/>
+
+<app-product-list 
+    title="title intensive"
+    subTitle="subTitle intensive"
+    [products]="products.byGroup['intensive']"
+/>
+
+<app-product-list 
+    title="title course"
+    subTitle="subTitle course"
+    [products]="products.byGroup['course']"
+/>
