--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,17 +1,17 @@
 <app-product-list 
-    title="title skill"
+    title="Skills"
     subTitle="subTitle skill"
     [products]="products.byGroup['skill']"
 />
 
 <app-product-list 
-    title="title intensive"
+    title="Intensives"
     subTitle="subTitle intensive"
     [products]="products.byGroup['intensive']"
 />
 
 <app-product-list 
-    title="title course"
+    title="Courses"
     subTitle="subTitle course"
     [products]="products.byGroup['course']"
 />
